# claudelytics

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PRICING_FIXES_SUMMARY.md  README.md  RELEASE_NOTES_v0.3.2.md  RESUME_TAB_IMPLEMENTATION.md  VISUAL_ENHANCEMENTS_SUMMARY.md  install.sh  release-checklist.md  test_install.sh  test_resume_tab.sh
.claude/agents/: cargo-error-resolver.md  refactor-cleaner.md
.claude/commands/: bug-fix.md  deploy-check.md  dev-setup.md  qa-pipeline.md  refactor.md
.claude/rules/: rust-safety.md  similarity.md  workflow.md
.github/workflows/: ci.yml  release.yml
Formula/: claudelytics.rb
docs/: CALCULATION_FIXES.md  conversation-viewer-spec.md  responsive-tables.md  tui_visual_enhancements.md
examples/: responsive_demo.sh
homebrew-claudelytics/: README.md
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: lock.json  mutants.json  outcomes.json
mutants.out.old/diff/: src__main.rs_line_1024_col_28.diff  src__main.rs_line_78_col_9.diff  src__main.rs_line_940_col_5.diff  src__main.rs_line_948_col_5.diff
mutants.out/diff/: src__billing_blocks.rs_line_100_col_36.diff  src__billing_blocks.rs_line_100_col_36_001.diff  src__billing_blocks.rs_line_114_col_41.diff  src__billing_blocks.rs_line_114_col_41_001.diff  src__billing_blocks.rs_line_124_col_9.diff  src__billing_blocks.rs_line_124_col_9_001.diff  src__billing_blocks.rs_line_124_col_9_002.diff  src__billing_blocks.rs_line_129_col_9.diff  (+408 more)
scripts/: generate-checksums.sh  install.sh  test_install.sh
src/: advanced_tui.rs  billing_blocks.rs  burn_rate.rs  cache_analysis.rs  claude_sessions.rs  config.rs  config_v2.rs  conversation_display.rs  conversation_parser.rs  display.rs  domain.rs  error.rs  export.rs  helpers.rs  interactive.rs  live_dashboard.rs  main.rs  mcp.rs  models.rs  models_registry.rs  parser.rs  performance.rs  pricing.rs  pricing_cache.rs  pricing_strategies.rs  processing.rs  projections.rs  realtime_analytics.rs  reports.rs  responsive_tables.rs  session_analytics.rs  session_blocks.rs  state.rs  terminal.rs  tui.rs  tui_visuals.rs  watcher.rs
(+40 files in other folders)
